<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item android:id="@+id/menu_item_main_activity"
            android:title="@string/menu_navigation_main_screen"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item android:id="@+id/menu_item_second_page"
            android:title="@string/menu_navigation_secondary_screen"
            android:icon="@drawable/ic_receipt_black_24dp"/>
    </group>
    <group>
        <item android:id="@+id/menu_item_change_location"
            android:title="@string/menu_navigation_change_location"
            android:icon="@drawable/ic_add_location_black_24dp"/>
        <item android:id="@+id/menu_item_change_picture"
            android:title="@string/menu_navigation_change_picture"
            android:icon="@drawable/ic_toys_black_24dp"/>
    </group>
    <item android:title="Other Options">
        <menu>
            <item android:id="@+id/menu_item_setting"
                android:title="@string/menu_navigation_setting"
                android:icon="@drawable/ic_build_black_24dp"/>
            <item android:id="@+id/menu_item_about_us"
                android:title="@string/menu_navigation_about_us"
                android:icon="@drawable/ic_info_black_24dp"/>
        </menu>
    </item>
</menu>